<resources>
    <string name="welcome">WELCOME</string>
    <string name="sentence">“Stick your thoughts, savor your days.” </string>
    <string name="cont">Click Cake to Continue</string>
    <string name="Username">Username</string>
    <string name="Password">Password </string>
    <string name="tvUsername">⋆˚࿔ </string>
    <string name="tvPassword">⋆˚࿔ </string>
    <string name="design">⋆˚࿔ </string>
    <string name="login">Login </string>
    <string name="Create">Create Account</string>
    <string name="signup">Sign Up</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back">Back</string>
    <string name="view_desc">View Entry Icon</string>
    <string name="view">View Entry</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="date">Date: </string>
    <string name="entry">Your diary entry content will appear here. . .</string>
    <string name="home">HOME</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="create_desc">Create Entry Icon</string>
    <string name="create_entry">Create Entry</string>
    <string name="enter_title">Enter title. . .</string>
    <string name="enter_diary">Write your diary entry here. . .</string>
    <string name="save">SAVE</string>
    <string name="cancel">Cancel</string>
    <string name="app_name">Dear Dango</string>
    <string name="start_diary">Start your diary journey! \n Tap + to create your first entry</string>
    <string name="about_the_devs">About the Devs</string>
    <string name="dev1_name">Christabelle Jaynee S.C. Acedillo</string>
    <string name="dev1_role">Documentation &amp; Quality Assurance Lead</string>
    <string name="dev2_name">Rantzel P. Dominguez</string>
    <string name="dev2_role">Authentication &amp; Backend Integration</string>
    <string name="dev2_title">Developer</string>
    <string name="dev3_name">Richielle Ann A. Gutierrez</string>
    <string name="dev3_role">UI/UX and Application Flow Engineer</string>
    <string name="dev4_name">Cristine Joy P. Tio</string>
    <string name="dev4_role">Diary Functionality Developer</string>
    <string name="copyright_text">© 2025 Dear Dango | Developed by: Rated BRRC</string>
    <string name="version">Version 1.0</string>
    <string name="app">App Info</string>
    <string name="exit">Exit App</string>
    <string name="add_entry">Add New Diary Entry</string>"
</resources>